# kagent

./: .gitignore  ACTUAL_SOURCE_CODE_CHANGES.md  CLAUDE.md  CLAUDE_MEMORY_ONLY.md  FINAL_IMPROVEMENT_REPORT.md  FINAL_SEMANTIC_IMPROVEMENT_REPORT.md  IMPROVEMENT_SUMMARY.md  MCP_VS_COMMANDS_COMPARISON.md  NATIVE_MEMORY_TOOLS_GUIDE.md  NEXT_OPTIMIZATION_ROADMAP.md  NEXT_STEPS_PLAN.md  README.md  build.gradle.kts  claude-memory-improvement-automation.py  correctly_fix_memory_manager.py  final_proactivity_validation.py  fix_memory_manager.py  gradle.properties  implement_semantic_search.py  memory-mcp-server.py  memory-mcp-wrapper.sh  memory-recall  memory-remember  memory-status  phase3_advanced_proactivity_enhancement.py  phase3_memory_proactivity_optimizer.py  phase3_proactive_memory_system.py  phase3_real_claude_test.py  quick-mcp-test.py  quick_semantic_test.py  sdk_memory_integration_methods.py  settings.gradle.kts  setup-memory-commands.sh  setup-memory-mcp.sh  simple_memory_test.py  simple_test.py  test-mcp-functionality.py  test-mcp-server.py  test-mcp-simple.py  test_api_embedding.py  (+7 more)
claude-memory-system/: README.md  main.py  pyproject.toml
claude-memory-system/claude_memory/: __init__.py  cli.py
claude-memory-system/claude_memory/core/: __init__.py  config.py  memory_manager.py.backup
claude-memory-system/claude_memory/engines/: __init__.py  capability_engine.py  semantic_engine.py
claude-memory-system/claude_memory/models/: __init__.py  capability.py  context.py  memory.py  snapshot.py
claude-memory-system/claude_memory/storage/: __init__.py  (+3 more)
(+115 files in other folders)
